# BillBot

./: .env  README.md  invoices.db  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
invoice_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/invoice_agent/: bill.py  database1.py  invoices.db
